--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "fix-cs": [
+            "prettier app/**/* database/**/* routes/**/* --write",
+            "php-cs-fixer fix"
         ]
     },
     "extra": {
