--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
-        "tailwindcss": "^3.0.18"
+        "postcss": "^8.4.6"
+    },
+    "dependencies": {
+        "bootstrap": "^5.2.0"
     }
 }
